--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:100,300,400,500,700,800,900|Rock+Salt');
+
 body {
     background: #767de4;
 }
@@ -12,6 +14,10 @@ body {
     
 }
 
+.main h1{
+    font-family: 'Rock Salt', cursive;
+}
+
 .blog {
     border: 13px solid black;
     padding: 3em;
@@ -24,8 +30,9 @@ body {
 
 }
 .story p{
-    font-weight: 600;
+    font-weight: 500;
     width: 40em;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .story td{
@@ -39,6 +46,17 @@ body {
     text-align: right;
 }
 
-.comment p{
-    font-weight: 100;
+.story .comment {
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-weight: 300;
+    
+}
+.story .date {
+    font-size: .80em;
+    font-weight: 500;
+}
+
+.story .date i{
+    font-size: 1em;
+    padding-left: auto;
 }
